[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI_THEME.tres" type="Theme" id=1]
[ext_resource path="res://script/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/Textures/Track1Preview.PNG" type="Texture" id=3]
[ext_resource path="res://assets/Textures/Track3Preview.PNG" type="Texture" id=4]
[ext_resource path="res://assets/Textures/Track2Preview.PNG" type="Texture" id=5]
[ext_resource path="res://assets/Textures/Track5Preview.PNG" type="Texture" id=6]
[ext_resource path="res://assets/Textures/Track4Preview.PNG" type="Texture" id=7]
[ext_resource path="res://overlay/Panel.gd" type="Script" id=8]
[ext_resource path="res://assets/buttonSfx.tscn" type="PackedScene" id=9]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel"]
margin_left = 26.532
margin_top = 19.3883
margin_right = 121.532
margin_bottom = 59.3883
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track1" type="Button" parent="Panel"]
margin_left = 144.74
margin_top = 164.312
margin_right = 1309.74
margin_bottom = 1197.31
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track2" type="Button" parent="Panel"]
margin_left = 775.961
margin_top = 162.584
margin_right = 1353.96
margin_bottom = 715.584
rect_scale = Vector2( 0.75, 0.75 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track3" type="Button" parent="Panel"]
margin_left = 1353.64
margin_top = 171.104
margin_right = 2037.64
margin_bottom = 788.104
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track4" type="Button" parent="Panel"]
margin_left = 502.349
margin_top = 617.312
margin_right = 1064.35
margin_bottom = 1183.31
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track5" type="Button" parent="Panel"]
margin_left = 1104.0
margin_top = 624.948
margin_right = 1658.0
margin_bottom = 1171.95
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSfx" parent="." instance=ExtResource( 9 )]
[connection signal="mouse_entered" from="Panel/Back" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Panel/Track1" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Track1" to="." method="_on_Track1_pressed"]
[connection signal="mouse_entered" from="Panel/Track2" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Track2" to="." method="_on_Track2_pressed"]
[connection signal="mouse_entered" from="Panel/Track3" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Track3" to="." method="_on_Track3_pressed"]
[connection signal="mouse_entered" from="Panel/Track4" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Track4" to="." method="_on_Track4_pressed"]
[connection signal="mouse_entered" from="Panel/Track5" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/Track5" to="." method="_on_Track5_pressed"]
